crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__lazygembg.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "a",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "holds object out to Amy",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what's",
                  "type": "text"
                }
              ],
              "raw_text": "what's",
              "span": {
                "end": 166,
                "start": 160
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 171,
                "start": 167
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "looks at chicken",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Gpx"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "holds nesting cups",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": "wi",
            "label": "xpho"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 213,
                "start": 210
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "foo",
        "type": "begin_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 293,
                "start": 289
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 295,
                "start": 294
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "chicken",
                  "type": "text"
                }
              ],
              "raw_text": "chicken",
              "span": {
                "end": 303,
                "start": 296
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "takes chicken",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 316,
                "start": 312
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 349,
                "start": 345
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "<1w-2w> holds object out to Amy <1w> picks up object .",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what's",
                  "type": "text"
                }
              ],
              "raw_text": "what's",
              "span": {
                "end": 364,
                "start": 358
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 369,
                "start": 365
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "label": "foo",
        "type": "end_gem"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "<1w-3w> holds object out to Amy",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 452,
                "start": 448
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "scoped_annotations": [
                {
                  "type": "scopedstressing"
                }
              ],
              "span": {
                "end": 455,
                "start": 453
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 464,
                "start": 460
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "<aft> manipulates chicken in hands",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": "6rat",
            "label": "xpho"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 514,
                "start": 511
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "b",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 586,
                "start": 582
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 588,
                "start": 587
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "woof",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 594,
                      "start": 593
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "woof",
                  "type": "shortening"
                }
              ],
              "raw_text": "woof+(woof)",
              "span": {
                "end": 600,
                "start": 589
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 613,
                "start": 609
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 626,
                "start": 622
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
