crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__lazygemwords.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "a bear",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "holds object out to Amy",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what's",
                  "type": "text"
                }
              ],
              "raw_text": "what's",
              "span": {
                "end": 171,
                "start": 165
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 176,
                "start": 172
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "looks at chicken",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Gpx"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "holds nesting cups",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": "wi",
            "label": "xpho"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 218,
                "start": 215
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "b foo",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 299,
                "start": 295
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 301,
                "start": 300
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "chicken",
                  "type": "text"
                }
              ],
              "raw_text": "chicken",
              "span": {
                "end": 309,
                "start": 302
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "takes chicken",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 322,
                "start": 318
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 355,
                "start": 351
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "<1w-2w> holds object out to Amy <1w> picks up object .",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what's",
                  "type": "text"
                }
              ],
              "raw_text": "what's",
              "span": {
                "end": 370,
                "start": 364
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 375,
                "start": 371
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "label": "a bear",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "<1w-3w> holds object out to Amy",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 460,
                "start": 456
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "scoped_annotations": [
                {
                  "type": "scopedstressing"
                }
              ],
              "span": {
                "end": 463,
                "start": 461
              },
              "type": "annotated_word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 472,
                "start": 468
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "<aft> manipulates chicken in hands",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": "6rat",
            "label": "xpho"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 522,
                "start": 519
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "label": "b baz",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "it's",
                  "type": "text"
                }
              ],
              "raw_text": "it's",
              "span": {
                "end": 598,
                "start": 594
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 600,
                "start": 599
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "woof",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 606,
                      "start": 605
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "woof",
                  "type": "shortening"
                }
              ],
              "raw_text": "woof+(woof)",
              "span": {
                "end": 612,
                "start": 601
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 625,
                "start": 621
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "yeah",
                  "type": "text"
                }
              ],
              "raw_text": "yeah",
              "span": {
                "end": 638,
                "start": 634
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
